<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".ConfirmActivity">

    <TextView
        android:id="@+id/infoTitle_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/order_information"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/name_edt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:textColorHint="#1AFFFFFF"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_txv"/>

    <TextView
        android:id="@+id/phone_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/name_txv" />

    <EditText
        android:id="@+id/phone_edt"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_phone_number_hint"
        android:textColorHint="#1AFFFFFF"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_txv" />

    <TextView
        android:id="@+id/price_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="25sp"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/phone_edt" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="insert"
        android:background="@drawable/button"
        android:text="@string/order"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="419dp" />


</android.support.constraint.ConstraintLayout>